Fix UI spacing for datasource overview

--- a/client/src/app/shared/list-item-expandable/list-item-expandable.component.scss
+++ b/client/src/app/shared/list-item-expandable/list-item-expandable.component.scss
@@ -43,7 +43,7 @@
 }
 
 mat-expansion-panel {
-  margin-bottom: 12px;
+  margin-bottom: 12px !important;
   --mat-expansion-container-shape: 8px;
   --mat-expansion-container-elevation-shadow: none;
 }
